z-index fix

--- a/css/app.styl
+++ b/css/app.styl
@@ -6,8 +6,8 @@ $backgroundColor = #0e0a20
 $baseUnit = 3vh
 $smallImage = 87vh
 $mobileWidth = "(max-width: 480px) and (min-width: 320px)"
-$leading = 28px
-$defaultType = 22px
+$leading = 26px
+$defaultType = 20px
 $kerning = 0.01em
 $abbreviation = $defaultType - 1
 
@@ -75,7 +75,7 @@ li
 		opacity: 1 !important
 	&.content-blur
 		transform: translateY(-90%)
-		animation: contentglow 5s linear infinite
+		animation: contentglow 3.5s linear infinite
 		opacity: 1 !important
 
 @keyframes contentglow {
@@ -133,7 +133,7 @@ li
 		position: absolute
 		top: 5%
 		right: 20px
-		font-size: 72px
+		font-size: 52px
 		cursor: pointer
 
 	abbr
